Aula 7 - criando página de detalhes e estrutura de rotas

--- a/src/app/recipe/ui/recipe-grid/recipe-grid.html
+++ b/src/app/recipe/ui/recipe-grid/recipe-grid.html
@@ -9,7 +9,8 @@
   @for(recipe of recipes(); track recipe.id) {
     <app-recipe-card
       [recipe]="recipe"
-      [categories]="categories()">
+      [categories]="categories()"
+      (clickEvent)="clickEvent.emit($event)">
     </app-recipe-card>
   }
 </section>
