--- a/src/app/recipe/feature/recipes/recipes.html
+++ b/src/app/recipe/feature/recipes/recipes.html
@@ -1,4 +1,5 @@
 <app-recipe-grid
   [recipes]="(recipe$ | async) ?? []"
-  [categories]="(categories$ | async) ?? []">
+  [categories]="(categories$ | async) ?? []"
+  (clickEvent)="goToRecipe($event)">
 </app-recipe-grid>
