--- a/src/app/recipe/ui/recipe-card/recipe-card.html
+++ b/src/app/recipe/ui/recipe-card/recipe-card.html
@@ -1,7 +1,7 @@
 @if(recipe(); as recipe) {
 <section class="recipe" (click)="clickEvent.emit(recipe.id)">
     <div>
-      <img [src]="recipe.imagePath" [alt]="recipe.name" />
+      <img [src]="resizedImageUrl() || placeholderImage" [alt]="recipe.name" />
     </div>
     <div>
       <small>{{ recipe.categoryIds | categoryName: categories() }}</small>
