Criação da tela de home completa

--- a/src/app/shared/ui/header/header.html
+++ b/src/app/shared/ui/header/header.html
@@ -3,6 +3,7 @@
     <!-- Links a serem implementados no capítulo sobre rotas -->
     <nav>
         <a routerLink="/">Home</a>
+        <a href="/receitas">Todas receitas</a>
         <a href="#">Minhas receitas</a>
         <a href="#">Meus favoritos</a>
         <a href="#">Minha conta</a>
