--- a/src/app/recipe/ui/banner/banner.scss
+++ b/src/app/recipe/ui/banner/banner.scss
@@ -32,6 +32,12 @@
   flex-direction: column;
   gap: 16px;
 }
+
+.search-result a {
+  margin: 0;
+}
+
 .search-result a:hover {
   cursor: pointer;
 }
+
