feat: Capítulo 9 - implementa tela de login, autenticação com jwt e componentes base para user-account favorites e my-recipes

--- a/src/app/shared/ui/header/header.html
+++ b/src/app/shared/ui/header/header.html
@@ -4,8 +4,8 @@
     <nav>
         <a routerLink="/">Home</a>
         <a href="/receitas">Todas receitas</a>
-        <a href="#">Minhas receitas</a>
-        <a href="#">Meus favoritos</a>
-        <a href="#">Minha conta</a>
+        <a href="/minhas-receitas">Minhas receitas</a>
+        <a href="/favoritos">Meus favoritos</a>
+        <a href="/minha-conta">Minha conta</a>
     </nav>
 </header>
